clean up article short descriptions

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/blog_post_summary.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/blog_post_summary.html
@@ -15,5 +15,5 @@
 
       {{ end -}}
     {{ end -}}
-    <span class="excerpt">{{ .Description }}</span>
+    <span class="excerpt">{{ .Description | plainify }}</span>
 </a>
