--- a/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
+++ b/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
@@ -61,12 +61,12 @@ img {
 
 h1, h2, h3, h4, h5 {
   clear: both;
-  margin: 2em 0 1em; }
+  font-weight: bold;
+  margin: 2em 0 1em;
+  letter-spacing: 0.018em;
+  color: #343838; }
   h1 > a, h2 > a, h3 > a, h4 > a, h5 > a {
-    text-decoration: none;
-    font-weight: bold;
-    letter-spacing: 0.018em;
-    color: #343838; }
+    text-decoration: none;}
     h1 > a:hover, h2 > a:hover, h3 > a:hover, h4 > a:hover, h5 > a:hover {
       color: #2060a0; }
 
@@ -76,7 +76,7 @@ h1 {
   color: #343838; }
 
 h2 {
-  font-size: 20px;
+  font-size: 24px;
   line-height: 21px;
   color: #343838; }
 
@@ -591,8 +591,10 @@ article {
   body {
     line-height: 20px; }
 
+  h1 {
+    font-weight: normal; }
+
   h1, h2, h3, h4, h5 {
-    font-weight: normal;
     margin: 1.5em 0 1em; }
 
   .container {
