--- a/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
+++ b/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
@@ -66,6 +66,7 @@ h1, h2, h3, h4, h5 {
   letter-spacing: 0.018em;
   color: #343838; }
   h1 > a, h2 > a, h3 > a, h4 > a, h5 > a {
+    color: #343838;
     text-decoration: none;}
     h1 > a:hover, h2 > a:hover, h3 > a:hover, h4 > a:hover, h5 > a:hover {
       color: #2060a0; }
