--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
@@ -56,18 +56,14 @@
     {{ if eq .Type "post" }}
       {{ if not .Draft }}
         <nav class="nav-below">
-          <div class="nav-previous">
-            {{/* prev/next are reversed: confusing, I know */}}
-            {{ if .Next }}
-            <a href="{{ .Next.Permalink }}"><span class="meta-nav">&larr;&nbsp;</span>{{ .Next.Title }}</a>
-            {{ end }}
-          </div>
-          <div class="nav-next">
-            {{ if .Prev }}
-            <a href="{{ .Prev.Permalink }}">{{ .Prev.Title }}<span class="meta-nav">&nbsp;&rarr;</span></a>
-            {{ end }}
-          </div>
-        </nav>
+          {{/* Prev/next are reversed: confusing, I know. */}}
+          {{ if .Next }}
+            {{ partial "nav_prev" .Next }}
+          {{ end }}
+          {{ if .Prev }}
+            {{ partial "nav_next" .Prev }}
+          {{ end }}
+      </nav>
       {{ end }}
 
       {{ if .Params.series }}
