fix code highlighting for latest hugo

--- a/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
+++ b/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
@@ -49,7 +49,7 @@ a {
   color: #2060a0;
   text-decoration: none; }
 
-code {
+p code {
   font-size: 90%;
   padding: 0 2px;
   border: 1px solid #ddd;
