--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -8,10 +8,14 @@
   <meta name="description" content="{{ .Description }}">
   <meta name="generator" content="Hugo">
   <meta name="twitter:title" content="{{ .Title }}">
+  <meta name="og:title" content="{{ .Title }}">
   <meta name="twitter:description" content="{{ .Description }}">
+  <meta name="og:description" content="{{ .Description }}">
   <meta name="twitter:site" content="@jessejiryudavis">
   <meta name="twitter:creator" content="@jessejiryudavis">
   <meta name="twitter:domain" content="emptysqua.re">
+  <meta name="og:url" content="{{ .Permalink }}">
+  <meta name="og:type" content="article">
   <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911"
         rel="stylesheet">
   <link rel="stylesheet" href="{{ "/static/blog.css" | relURL }}">
