--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/index.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "extrahead" -}}
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="{{ "static/favicon.gif" | absURL }}">
-  <meta name="og:image" content="{{ "static/favicon.gif" | absURL }}">
+  <meta name="twitter:image" content="{{ "static/favicon.ico" | absURL }}">
+  <meta name="og:image" content="{{ "static/favicon.ico" | absURL }}">
 {{ end }}
 
 {{ define "body" }}
