--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911"
         rel="stylesheet">
   <link rel="stylesheet" href="{{ "/static/blog.css" | relURL }}">
-  <link rel="shortcut icon" href="{{ "/static/favicon.gif" | relURL }}">
+  <link rel="icon" href="{{ "/static/favicon.ico" | relURL }}">
   <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml"
         title="{{ .Site.Title }}"/>
   <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml"
