--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/nav_prev.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/nav_prev.html
@@ -4,5 +4,5 @@
   </div>
 {{ else }}
   {{/* Recurse. Confusingly, Hugo reverses next and previous. */}}
-  {{ partial "nav_prev" .Next }}
+  {{ partial "nav_prev" .PrevPage }}
 {{ end }}
