--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
@@ -12,6 +12,10 @@
       content="{{ $post.Permalink | absURL }}{{ $thumbnail }}" />
     {{ end -}}
 {{ end }}
+<meta name="og:title" content="{{ .Title }}">
+<meta name="twitter:title" content="{{ .Title }}">
+<meta class="swiftype" name="published_at" data-type="date"
+      content="{{ .Date.Format "January 2, 2006" }}" />
 {{ end }}
 
 {{ define "body" }}
