--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/section/all-posts.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/section/all-posts.html
@@ -2,6 +2,8 @@
 
 {{ define "extrahead" -}}
 <meta class="swiftype" name="popularity" data-type="integer" content="0" />
+<meta name="og:title" content="All Articles">
+<meta name="twitter:title" content="All Articles">
 {{ end }}
 
 {{ define "body" }}
