--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/taxonomy/category.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/taxonomy/category.html
@@ -2,6 +2,8 @@
 
 {{ define "extrahead" -}}
 <meta class="swiftype" name="popularity" data-type="integer" content="0" />
+<meta name="twitter:title" content="{{ replace .Title "-" " " | title }}">
+<meta name="og:title" content="{{ replace .Title "-" " " | title }}">
 {{ end }}
 
 {{ define "body" }}
