--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -18,10 +18,9 @@
         rel="stylesheet">
   <link rel="stylesheet" href="{{ "/static/blog.css" | relURL }}">
   <link rel="icon" href="{{ "/static/favicon.ico" | relURL }}">
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml"
-        title="{{ .Site.Title }}"/>
-  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml"
-        title="{{ .Site.Title }}"/>
+  {{ range .AlternativeOutputFormats -}}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+  {{ end -}}
   <meta name="author" content="A. Jesse Jiryu Davis">
   <meta class="swiftype" name="info" data-type="string" content="{{ .Description }}" />
 </head>
