--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/taxonomy/category.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/taxonomy/category.html
@@ -8,6 +8,6 @@
 
 {{ define "body" }}
   {{ $taxonomy_title := .Title }}
-  {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+  {{ $paginator := .Paginate (where (where .Data.Pages "Type" "post") ".Params.draft" "!=" true) }}
   {{ partial "taxonomy" (dict "node" . "paginator" $paginator "taxonomy_type" "Category" "taxonomy_name" $taxonomy_title) }}
 {{ end }}
