--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/taxonomy/series.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/taxonomy/series.html
@@ -3,6 +3,6 @@
 {{ define "body" }}
   {{ $series_key := .Title | urlize }}
   {{ $series := index .Site.Data.series $series_key }}
-  {{ $paginator := .Paginate .Data.Pages.ByPublishDate }}
+  {{ $paginator := .Paginate (where .Data.Pages.ByPublishDate ".Params.draft" "!=" true) }}
   {{ partial "taxonomy" (dict "node" . "data" $series "paginator" $paginator "taxonomy_type" "Series" "taxonomy_name" $series.title) }}
 {{ end }}
