omit drafts from recent_posts

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/shortcodes/recent_posts.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/shortcodes/recent_posts.html
@@ -1,5 +1,5 @@
 <ul class="post-list">
-  {{ range first 5 (where .Site.Pages "Type" "post") }}
+  {{ range first 5 (where (where .Site.Pages "Type" "post") ".Params.draft" "!=" true) }}
     <li>{{ partial "blog_post_summary" . }}</li>
   {{ end }}
 </ul>
