use hugo's .RelPermalink not .URL

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/blog_post_summary.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/blog_post_summary.html
@@ -1,16 +1,16 @@
 {{ $path := .File.BaseFileName -}}
 
-<a href="{{ .URL }}" class="summary-title">{{ .Title }}</a>
-<a href="{{ .URL }}">
+<a href="{{ .RelPermalink }}" class="summary-title">{{ .Title }}</a>
+<a href="{{ .RelPermalink }}">
     {{ $post := . -}}
     {{ with .Params.thumbnail -}}
       {{ $thumbnail := replaceRE "(.*)\\.([^.]+)$" "$1@240.$2" . }}
       {{ with printf "content/%s/%s" $path $thumbnail | imageConfig }}
         {{ if (and .Width .Height) }}
         {{ $thumbnail_height := div (mul 120 .Height) .Width }}
-        <img class="thumbnail" width="120" src="{{ $post.URL }}{{ $thumbnail }}" height="{{ $thumbnail_height }}">
+        <img class="thumbnail" width="120" src="{{ $post.RelPermalink }}{{ $thumbnail }}" height="{{ $thumbnail_height }}">
         {{ else }}
-        <img class="thumbnail" width="120" src="{{ $post.URL }}{{ $thumbnail }}">
+        <img class="thumbnail" width="120" src="{{ $post.RelPermalink }}{{ $thumbnail }}">
         {{ end }}
 
       {{ end -}}
