--- a/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
+++ b/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
@@ -546,6 +546,9 @@ article {
 .nav-next {
   float: right; }
 
+.MathJax_Display {
+  font-size: 130%; }
+
 @media screen and (min-width: 480px) {
   .main-nav ul {
     margin-top: 0.5em; }
