--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -33,6 +33,8 @@
   <div class="backgroundplaceholder6"></div>
   {{ block "body" . }}{{ end }}
   <div class="ga-script">{{ partial "generate_google_analytics.html" }}</div>
+  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
   <script type="text/javascript">
     (function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
     (w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
