--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/sidebar.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/sidebar.html
@@ -8,10 +8,7 @@
       </li>{{ end }}
       <li class="nav-item nav-divider nav-divider-2">&nbsp;</li>
       <li class="nav-item search-item">
-        <form class="search-form">
-          <input type="text" name="q" value="" id="search-input" class="search-text-input"/>
-          <input type="submit" value="search" id="search-submit" class="button search-button"/>
-        </form>
+        <div class="gcse-searchbox-only">
       </li>
     </ul>
   </nav>
