restore sidebar search box

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/sidebar.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/sidebar.html
@@ -8,7 +8,10 @@
       </li>{{ end }}
       <li class="nav-item nav-divider nav-divider-2">&nbsp;</li>
       <li class="nav-item search-item">
-        <div class="gcse-searchbox-only">
+        <form class="search-form" action="/search">
+          <input type="text" name="q" value="" id="search-input" class="search-text-input"/>
+          <input type="submit" value="search" id="search-submit" class="button search-button"/>
+        </form>
       </li>
     </ul>
   </nav>
