Revert "replace swiftype with google"
3f89214edbb1b5145857bc86154e71241af0b7d6

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/taxonomy/tag.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/taxonomy/tag.html
@@ -1,6 +1,7 @@
 {{ define "title" }}{{ .Site.Title }} | {{ replace .Title "-" " " | title }}{{ end }}
 
 {{ define "extrahead" -}}
+<meta class="swiftype" name="popularity" data-type="integer" content="0" />
 <meta name="twitter:title" content="{{ replace .Title "-" " " | title }}">
 <meta name="og:title" content="{{ replace .Title "-" " " | title }}">
 {{ end }}
