--- a/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
+++ b/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
@@ -546,8 +546,8 @@ article {
 .nav-next {
   float: right; }
 
-.MathJax_Display {
-  font-size: 130%; }
+mjx-math {
+  font-size: 130% !important; }
 
 @media screen and (min-width: 480px) {
   .main-nav ul {
