--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
@@ -37,7 +37,7 @@
           <span class="byline">
             <span class="sep">&nbsp;&mdash;&nbsp;</span>
             <a href="https://twitter.com/{{ .Site.Params.twitterhandle }}">
-              <span class="author">{{ .Site.Params.author }}</span>
+              <span class="author">{{ .Site.Author.name }}</span>
             </a>
           </span>
         </div>
