--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/generate_google_analytics.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/generate_google_analytics.html
@@ -1,10 +1,9 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PQJKJSJ736"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-<div id="ga-script"></div>
-<script type="text/javascript">
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-41411917-1', 'emptysqua.re');
-        ga('send', 'pageview');
+  gtag('config', 'G-PQJKJSJ736');
 </script>
