--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/index.rss.xml
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/index.rss.xml
@@ -27,7 +27,7 @@
       <pubDate>{{ .Date.Format "Mon, 02 Jan 2006 15:04:05 -0700" | safeHTML }}</pubDate>
       {{ with .Site.Author.email }}<author>{{.}}{{ with $.Site.Author.name }} ({{.}}){{end}}</author>{{end}}
       <guid>{{ .Permalink }}</guid>
-      <description>{{ partial "absolute_urls.html" . | html }}</description>
+      <description>{{ partial "absolute_urls.html" . | partial "svg_to_png.html" | html }}</description>
     </item>
     {{ end }}
   </channel>
