control line height

--- a/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
+++ b/emptysquare/themes/hugo_theme_emptysquare/static/static/blog.css
@@ -53,6 +53,11 @@ a.st-ui-result .st-ui-type-detail {
   max-height: 96px !important;
 }
 
+/* prevent super/subscripts from affecting line spacing */
+sub, sup {
+    line-height: 0;
+}
+
 input, textarea, button, select {
   margin: 0;
   font-size: 100%;
