are-we-serious-about-statistical-properties-tlaplus.md

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -21,6 +21,9 @@
   {{ end -}}
   <meta name="author" content="{{ .Site.Author.name }}">
   <meta class="swiftype" name="info" data-type="string" content="{{ .Description }}" />
+  {{- if .Params.special_css }}
+    <link rel="stylesheet" href="{{ .Params.special_css }}">
+  {{- end }}
 </head>
 <body class="">
   <div class="backgroundplaceholder1"></div>
