--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
@@ -45,7 +45,7 @@
         <h1 class="title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
       </header>
       <div class="post-content">{{ .Content }}</div>
-      <a class="share" href="https://bsky.app/intent/compose?text={{ .Title }} {{ .Permalink | absURL }}">&#129419; Share on Bluesky</a>
+      <a class="share" href="https://bsky.app/intent/compose?text={{ .Title }}%20{{ .Permalink | absURL }}%20by%20@emptysqua.re" target="_blank">&#129419; Share on Bluesky</a>
     </article>
     <footer class="entry-meta">
       {{ with (index .Params "category") }}
