no header links on home

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/_markup/render-heading.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/_markup/render-heading.html
@@ -1,4 +1,6 @@
 <h{{ .Level }} id="{{ .Anchor | safeURL }}">{{ .Text | safeHTML }}
+{{ if (not .Page.IsHome) }}
 <a class="header-link" href="#{{ .Anchor | safeURL }}">#</a>
+{{ end }}
 </h{{ .Level }}>
 
