--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/nav_next.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/nav_next.html
@@ -4,5 +4,5 @@
   </div>
 {{ else }}
   {{/* Recurse. Confusingly, Hugo reverses next and previous. */}}
-  {{ partial "nav_next" .NextPage }}
+  {{ partial "nav_next" .Next }}
 {{ end }}
