--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -1,3 +1,7 @@
+{{- $hugoVersion := "0.147.5" -}}
+{{- if ne hugo.Version $hugoVersion -}}
+  {{- errorf "Requires Hugo version v%s exactly." $hugoVersion -}}
+{{- end -}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
