switch from MathJax to MathML

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -28,6 +28,10 @@
   {{- if .Params.special_css }}
     <link rel="stylesheet" href="{{ .Params.special_css }}">
   {{- end }}
+  {{ $noop := .WordCount }}
+  {{ if .Page.Store.Get "hasMath" }}
+    <link href="https://cdn.jsdelivr.net/npm/katex@0.16.22/dist/katex.min.css" rel="stylesheet">
+  {{ end }}
 </head>
 <body class="">
   <div class="backgroundplaceholder1"></div>
@@ -38,8 +42,6 @@
   <div class="backgroundplaceholder6"></div>
   {{ block "body" . }}{{ end }}
   <div class="ga-script">{{ partial "generate_google_analytics.html" }}</div>
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <script type="text/javascript">
     (function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
     (w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
