--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/svg_to_png.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/svg_to_png.html
@@ -1,4 +1,4 @@
-{{ $html := . | safeHTML }}
+{{ $html := .Content | safeHTML }}
 
 {{ $svgSrcs := findRE " src=\"([^\"]*\\.svg)\"" $html }}
 {{ range $src := $svgSrcs }}
