--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/absolute_urls.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/absolute_urls.html
@@ -1,5 +1,5 @@
 {{ $html := .Content | safeHTML }}
-{{ $permalink := urls.Parse .Permalink }}
+{{ $permalink := urls.Parse .Page.Permalink }}
 
 {{ $srcs := findRE " src=\"([^\"]*)\"" $html }}
 {{ range $src := $srcs}}
