--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/remove_header_links.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/remove_header_links.html
@@ -1,4 +1,4 @@
-{{ $html := . | safeHTML }}
+{{ $html := .Content | safeHTML }}
 {{ $srcs := findRE "<a class=\"header-link\" href=\"[^\"]*?\">#</a>" $html }}
 {{ range $src := $srcs}}
   {{ $html = replace $html $src "" }}
